Add option to disable match creation for unauthenticated users
