# backend/src/configController.ts
@@ -1,18 +1,26 @@
-import { Controller, Get, NoSecurity, Route, Security } from '@tsoa/runtime';
-import { TMT_LOG_ADDRESS } from '.';
-import { IConfig } from '../../common';
+import { Body, Controller, Get, NoSecurity, Patch, Route, Security } from '@tsoa/runtime';
+import { IConfig, IConfigUpdateDto } from '../../common';
+import * as Config from './config';
 
 @Route('/api/config')
 @Security('bearer_token')
 export class ConfigController extends Controller {
 	/**
-	 * Get some internal config variables. Currently only the set TMT_LOG_ADDRESS.
+	 * Get some internal config variables.
 	 */
 	@Get()
 	@NoSecurity()
 	async getConfig(): Promise<IConfig> {
-		return {
-			tmtLogAddress: TMT_LOG_ADDRESS,
-		};
+		return Config.get();
+	}
+	
+	/**
+	 * Update the configuration.
+	 */
+	@Patch()
+	async updateConfig(
+		@Body() requestBody: IConfigUpdateDto,
+	): Promise<IConfig> {
+		return await Config.set(requestBody);
 	}
 }
